unpackaged/main/default/objects/n2de__Distribution_log_action__c/n2de__Distribution_log_action__c.object-meta.xml
<CustomObject>
    <description>Distribution log actions</description>
    <label>Distribution log action</label>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution log actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>