unpackaged/main/default/objects/n2de__Distribution_log_action__c/fields/n2de__Action_date__c.field-meta.xml
<CustomField>
    <fullName>n2de__Action_date__c</fullName>
    <label>Action date</label>
    <type>DateTime</type>
</CustomField>