unpackaged/main/default/objects/n2de__Distribution_log_action__c/fields/n2de__Distribution_log__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distribution_log__c</fullName>
    <label>Distribution log</label>
    <referenceTo>n2de__Distribution_log__c</referenceTo>
    <relationshipLabel>Distribution log actions</relationshipLabel>
    <relationshipName>Distribution_log_actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>