unpackaged/main/default/objects/n2de__Distribution_log_action__c/fields/n2de__Time_to_action_days__c.field-meta.xml
<CustomField>
    <fullName>n2de__Time_to_action_days__c</fullName>
    <label>Time to action days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>